@@ -109,6 +109,14 @@ TQM860L_config	:	unconfig
 	echo "CPU   = mpc8xx"	>>config.mk ;	\
 	echo "#include <config_$(@:_config=).h>" >config.h
 
+dbox_config     :       unconfig
+	@echo "Configuring for $(@:_config=) Board..." ; \
+	cd include ;				\
+	echo "ARCH  = ppc"	> config.mk ;	\
+	echo "BOARD = dbox"	>>config.mk ;	\
+	echo "CPU   = mpc8xx"	>>config.mk ;	\
+	echo "#include <config_$(@:_config=).h>" >config.h
+
 ETX094_config	:	unconfig
 	@echo "Configuring for $(@:_config=) Board..." ; \
 	cd include ;				\
